[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
